# ResumePracticeSite

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: deploy.yml
src/: app.rs  main.rs
src/components/: experience.rs  github.rs  header.rs  mod.rs  section.rs
style/: main.css
